[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/UI/FileSelect.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Editor/Line.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/FileDialog/FileBack.png" type="Texture" id=4]
[ext_resource path="res://Fonts/SuperTux-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/UI/FileDialog/FileReload.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 6
extra_spacing_char = -1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 6
extra_spacing_char = -2
font_data = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 8
script = ExtResource( 1 )

[node name="Overwrite" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -47.5
margin_right = 150.0
margin_bottom = 47.5
theme = ExtResource( 2 )
popup_exclusive = true

[node name="Panel" type="Panel" parent="Overwrite"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Overwrite/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Overwrite/Panel/VBoxContainer"]
margin_top = 2.0
margin_right = 284.0
margin_bottom = 23.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Overwrite the file?"
align = 1

[node name="Line" type="TextureRect" parent="Overwrite/Panel/VBoxContainer"]
margin_top = 33.0
margin_right = 284.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 2 )
texture = ExtResource( 3 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Overwrite/Panel/VBoxContainer"]
margin_top = 45.0
margin_right = 284.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 80
alignment = 1

[node name="OverwriteYes" type="Button" parent="Overwrite/Panel/VBoxContainer/HBoxContainer"]
margin_left = 38.0
margin_right = 76.0
margin_bottom = 32.0
rect_min_size = Vector2( 38, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "OK"

[node name="OverwriteNo" type="Button" parent="Overwrite/Panel/VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 245.0
margin_bottom = 32.0
rect_min_size = Vector2( 89, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "Cancel"

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -180.0
margin_right = 200.0
margin_bottom = 180.0
theme = ExtResource( 2 )
popup_exclusive = true

[node name="Panel" type="Panel" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -39.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="Popup/Panel/VBoxContainer"]
margin_right = 384.0
margin_bottom = 30.0
rect_min_size = Vector2( 384, 0 )
alignment = 1

[node name="Back" type="TextureButton" parent="Popup/Panel/VBoxContainer/TopBar"]
margin_left = 8.0
margin_right = 38.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_mode = 1
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 1
texture_normal = ExtResource( 4 )
expand = true

[node name="DirectoryName" type="Label" parent="Popup/Panel/VBoxContainer/TopBar"]
margin_left = 42.0
margin_top = 5.0
margin_right = 342.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
rect_clip_content = true
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "res://Scenes//Levels"
align = 1
valign = 1
clip_text = true

[node name="Reload" type="TextureButton" parent="Popup/Panel/VBoxContainer/TopBar"]
margin_left = 346.0
margin_right = 376.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_mode = 1
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 1
texture_normal = ExtResource( 6 )
expand = true

[node name="Line" type="TextureRect" parent="Popup/Panel/VBoxContainer"]
margin_top = 34.0
margin_right = 384.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 2 )
texture = ExtResource( 3 )
expand = true

[node name="ScrollContainer" type="ScrollContainer" parent="Popup/Panel/VBoxContainer"]
margin_top = 40.0
margin_right = 384.0
margin_bottom = 274.0
rect_min_size = Vector2( 384, 0 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Files" type="VBoxContainer" parent="Popup/Panel/VBoxContainer/ScrollContainer"]
margin_right = 384.0
margin_bottom = 234.0
rect_min_size = Vector2( 384, 0 )
size_flags_vertical = 3
custom_constants/separation = 2

[node name="FileName" type="VBoxContainer" parent="Popup/Panel/VBoxContainer"]
margin_top = 278.0
margin_right = 384.0
margin_bottom = 313.0
custom_constants/separation = 1
alignment = 1

[node name="Line3" type="TextureRect" parent="Popup/Panel/VBoxContainer/FileName"]
margin_right = 384.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
texture = ExtResource( 3 )
expand = true

[node name="HSplitContainer" type="HBoxContainer" parent="Popup/Panel/VBoxContainer/FileName"]
margin_top = 3.0
margin_right = 384.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 32 )

[node name="Label" type="Label" parent="Popup/Panel/VBoxContainer/FileName/HSplitContainer"]
margin_top = 5.0
margin_right = 65.0
margin_bottom = 26.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="Popup/Panel/VBoxContainer/FileName/HSplitContainer"]
margin_left = 69.0
margin_right = 342.0
margin_bottom = 32.0
size_flags_horizontal = 3
context_menu_enabled = false

[node name="FileType" type="Label" parent="Popup/Panel/VBoxContainer/FileName/HSplitContainer"]
margin_left = 346.0
margin_top = 5.0
margin_right = 384.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = ".tscn"

[node name="LevelSelect" type="VBoxContainer" parent="Popup/Panel/VBoxContainer"]
visible = false
margin_top = 278.0
margin_right = 384.0
margin_bottom = 313.0
custom_constants/separation = 1
alignment = 1

[node name="Line3" type="TextureRect" parent="Popup/Panel/VBoxContainer/LevelSelect"]
margin_right = 384.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
texture = ExtResource( 3 )
expand = true

[node name="HSplitContainer" type="HBoxContainer" parent="Popup/Panel/VBoxContainer/LevelSelect"]
margin_top = 3.0
margin_right = 384.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 35
alignment = 1

[node name="PackProperties" type="Button" parent="Popup/Panel/VBoxContainer/LevelSelect/HSplitContainer"]
margin_left = 35.0
margin_right = 153.0
margin_bottom = 32.0
text = "Properties"

[node name="EditMap" type="Button" parent="Popup/Panel/VBoxContainer/LevelSelect/HSplitContainer"]
margin_left = 188.0
margin_right = 349.0
margin_bottom = 32.0
text = "Edit Worldmap"

[node name="Line2" type="TextureRect" parent="Popup/Panel"]
anchor_right = 1.0
margin_top = 322.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 2 )
texture = ExtResource( 3 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/Panel"]
margin_top = 324.0
margin_right = 390.0
margin_bottom = 356.0
custom_constants/separation = 80
alignment = 1

[node name="OK" type="Button" parent="Popup/Panel/HBoxContainer"]
margin_left = 91.0
margin_right = 129.0
margin_bottom = 32.0
rect_min_size = Vector2( 38, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "OK"

[node name="Cancel" type="Button" parent="Popup/Panel/HBoxContainer"]
margin_left = 209.0
margin_right = 298.0
margin_bottom = 32.0
rect_min_size = Vector2( 89, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "Cancel"
[connection signal="pressed" from="Overwrite/Panel/VBoxContainer/HBoxContainer/OverwriteYes" to="." method="_on_OverwriteYes_pressed"]
[connection signal="pressed" from="Overwrite/Panel/VBoxContainer/HBoxContainer/OverwriteNo" to="." method="_on_OverwriteNo_pressed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/TopBar/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/TopBar/Reload" to="." method="_on_Reload_pressed"]
[connection signal="text_changed" from="Popup/Panel/VBoxContainer/FileName/HSplitContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/LevelSelect/HSplitContainer/PackProperties" to="." method="_on_PackProperties_pressed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/LevelSelect/HSplitContainer/EditMap" to="." method="_on_EditMap_pressed"]
[connection signal="pressed" from="Popup/Panel/HBoxContainer/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="Popup/Panel/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
